# fsl-lsp

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile  package-lock.json  package.json  plan.md  todo.md
.cargo/: config.toml
crates/fsl-analyzer/: Cargo.toml
crates/fsl-analyzer/src/: builder.rs  builtin.rs  context.rs  index.rs  lib.rs  resolver.rs  scope.rs  span.rs  symbol.rs  symbols.rs  ty.rs
crates/fsl-fmt/: Cargo.toml  readme.md  tests.md
crates/fsl-lexer/: Cargo.toml
crates/fsl-ls/: Cargo.toml
crates/fsl-ls/src/: completion.rs  definition.rs  format.rs  hover.rs  main.rs  on_change.rs  pos.rs  workspace.rs
crates/fsl-lsp/: Cargo.toml
crates/fsl-parser/: Cargo.toml
crates/fsl-playground/: Cargo.toml
crates/fsl-playground/src/: main.rs
extension/fsl-lsp-code/: .npmrc  .vscodeignore  README.md  language-configuration.json  package.json  pnpm-lock.yaml  tsconfig.json
fsl-sample/alu32-main/: .gitignore  Makefile  README.md  add32.fsl  alu32.fsl.orig  test_alu32.fsl  test_alu32.pat  test_alu32.result.sample  top_alu32.fsl
fsl-sample/check/: check.fsl
fsl-sample/mult32-main/: .gitignore  Makefile  README.md  mult32.fsl  mult32.fsl.orig  test_mult32.fsl  test_mult32.pat  test_mult32.result.sample
fsl-sample/p32ExecUnit-main/: add32.fsl  p32Opcode.fsl  test_p32ExecUnit.fsl
fsl-sample/p32m2-main/: alu32.fsl  p32DecodeUnit.fsl  p32ExceptionCauseCode.fsl  p32ExecUnit.fsl  p32Opcode.fsl  p32m2.fsl  regs32x32.fsl  regs32x8.fsl  shift32.fsl  test_p32m2.fsl
src/: extension.ts
(+28 files in other folders)
