[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["hinshiba"]

[workspace]
members = [
    "crates/fsl-lexer",
    "crates/fsl-parser",
    "crates/fsl-analyzer",
    "crates/fsl-ls",
    "crates/fsl-playground",
    # "crates/fsl-formatter",
]
resolver = "3"

[workspace.dependencies]
