[package]
name = "fsl-playground"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[[bin]]
name = "fsl-playground"
path = "src/main.rs"

[dependencies]
fsl-lexer = { path = "../fsl-lexer" }
fsl-parser = { path = "../fsl-parser" }
fsl-analyzer = { path = "../fsl-analyzer" }
fsl-ls = { path = "../fsl-ls" }
clap = { version = "4.5", features = ["derive"] }
